--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,31 @@
 {
     "name": "novatio/gdpr-cookiepolicy",
     "description": "SilverStripe GDPR Cookie Policy Module",
-    "type": "silverstripe-module",
+    "type": "silverstripe-vendormodule",
     "homepage": "https://github.com/novatio/silverstripe-gdpr-cookie-policy",
     "license": "BSD-3-Clause",
     "keywords": ["silverstripe", "cookie", "cookie-policy", "notification", "module", "cms", "gdrp", "avg"],
     "authors": [{
         "name": "Gabrijel Gavranović",
-        "email": "gabrijel@novat.io"
+        "email": "gabrijel@gavro.nl"
     }],
     "support": {
         "issues": "https://github.com/novatio/silverstripe-gdpr-cookie-policy/issues"
     },
     "require": {
-        "silverstripe/cms": "~3.0",
-        "silverstripe/framework": "~3.0",
-        "tractorcow/silverstripe-colorpicker": "~3.0",
-        "silverstripe/display-logic": "1.2.*|1.5.*"
+        "silverstripe/cms": "^4",
+        "silverstripe/framework": "^4",
+        "tractorcow/silverstripe-colorpicker": "^4",
+        "silverstripe/display-logic": "^2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Novatio\\CookiePolicy\\": "src/"
+        }
     },
     "extra": {
-        "installer-name": "cookiepolicy"
+        "expose": [
+            "javascript"
+        ]
     }
 }
